# router_phase1

./: .gitignore  AGENTS.md  BACKGROUND_SERVERS.md  CHAT_SYSTEM_V1.md  CLEAN_IMPLEMENTATION.md  EDGE_AWARE_TOOLTIPS.md  FINAL_FIXES.md  FIXES_APPLIED.md  Makefile  QUICKREF.md  README.md  SERVERS.md  TODO.md  TOOL_INVESTIGATION_REPORT.md  TUI_README.md  UI_BUTTON_ISSUE.md  UPGRADES.md  agt  app.py  chat  chat.sqlite3  chatstore.py  config.py  install-service.sh  kiwix-serve-sdc.sh  kiwix_proxy.py  manage_server.sh  ollama-web.service  pyproject.toml  rag.sqlite3  ragstore.py  requirements.txt  research.sqlite3  researchstore.py  router.json  router.service  router_tui.py  run_tui.sh  run_webui.sh  server_config.json  (+9 more)
agent/: budget.py  citation.py  cli.py  config.py  context.py  controller.py  deep_research.py  defaults.py  intelligent_tools.py  manifest.py  pipeline.py  rag.py  registry.py  router.py  tool_learning.py  verifier.py  worker.py  worker_ollama.py  worker_opencode.py
backend/: app.py
config/: default.yaml
docs/: CHAT_SYSTEM_V1.md  EDGE_AWARE_TOOLTIPS.md  FINAL_FIXES.md  FIXES_APPLIED.md  README.md  TUI_README.md
frontend/: jest.config.js  package-lock.json  package.json
modules/cognihub-tool/: .gitignore  AGENTS.md  README.md  pyproject.toml  run.ps1  run.py
modules/cognihub-tool/ollama_tools/: __init__.py  agent.py  config.py  toolcore.py
modules/cognihub-tool/ollama_tools/tools/: __init__.py  basic.py  internet.py
scripts/: manage_server.bat  manage_server.sh  migrate_metadata.py  ollama-web.service  ollama_tool_agent.py  run_agent.sh  (+2 more)
(+150 files in other folders)
