[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognihub"
version = "0.1.0"
description = "AI chat and research application with web scraping and RAG"
authors = [
    {name = "Anomaly Co", email = "support@anomaly.co"},
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "python-multipart",
    "beautifulsoup4",
    "lxml",
    "readability-lxml",
    "textual",
    "rich",
    "psutil",
    "numpy",
]
requires-python = ">=3.8"
readme = "README.md"

[project.scripts]
cognihub-app = "cognihub.app:main"
cognihub-tui = "cognihub.tui.cognihub_tui:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cognihub*"]

[tool.setuptools.package-data]
cognihub = ["static/*", "static/**/*"]