[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama_tools"
version = "0.2.0"
description = "Minimal tool-calling framework for Ollama (Qwen) + Internet"
requires-python = ">=3.11"
dependencies = [
  "ollama>=0.4.0",
  "pydantic>=2.6.0",
  "requests>=2.31.0",
  "ddgs>=1.0.0",
  "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
]

[tool.setuptools]
packages = ["ollama_tools", "ollama_tools.tools"]

[tool.ruff]
line-length = 100
